--- a/main.css
+++ b/main.css
@@ -9,4 +9,11 @@ body {
 #button {
   font-family: "Roboto", sans-serif;
   font-weight: bold;
+  background-color: red;
+  color: darkred;
+}
+
+#content {
+  background-image: url("./stars.gif");
+  background-color: turquoise;
 }
