--- a/main.css
+++ b/main.css
@@ -1,10 +1,9 @@
 body {
-    background-image: url("bruh.gif");
+    background-image: url("./stripes-light.png");
 }
 
 #content {
-    background-image: url("./stars.gif");
-    background-color: turquoise;
+    background-image: url("./stripes-light.png");
 }
 
 #breh {
